dark mode fixed logo and other stuff

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,6 @@
     fill: transparent;
   }
   to {
-    fill: #2d3748;
+    fill: currentColor;
   }
 }
